feat(auth): implement HTTP-only cookie JWT authentication
SECURITY IMPROVEMENTS:
- JWT tokens now stored in HTTP-only cookies instead of localStorage
- Prevents XSS (Cross-Site Scripting) attacks from stealing tokens
- Prevents malicious JavaScript from accessing authentication tokens
- SameSite=Lax policy prevents CSRF attacks
- Secure flag ready for HTTPS in production

BACKEND CHANGES:
- Add CookieService for HTTP-only cookie management
- Update AuthController to set/read tokens from cookies
- Update OAuth2AuthenticationSuccessHandler to use cookies
- Add JwtCookieFilter in API Gateway to extract JWT from cookies
- Update CORS config to expose Set-Cookie header
- Add cookie configuration properties (domain, secure, same-site)

FRONTEND CHANGES:
- Remove localStorage token storage (tokens in cookies)
- Keep user profile in localStorage for fast UI loading
- Update axios to rely on withCredentials for cookie auth
- Simplify OAuth2 callback (no tokens in URL)
- Update authApi to remove token parameters

The user profile remains in localStorage for UX (instant UI load),
while session validation always happens server-side via /api/v1/auth/me

--- a/backend/auth-service/src/main/resources/application.yaml
+++ b/backend/auth-service/src/main/resources/application.yaml
@@ -59,6 +59,12 @@ jwt:
 oauth2:
   redirect-uri: ${OAUTH2_REDIRECT_URI}
 
+# Cookie Configuration for HTTP-only JWT tokens
+cookie:
+  domain: ${COOKIE_DOMAIN}
+  secure: ${COOKIE_SECURE}
+  same-site: ${COOKIE_SAME_SITE}
+
 eureka:
   client:
     service-url:
